force-app/main/default/objects/sf_scm__UserNotification__c/sf_scm__UserNotification__c.object-meta.xml
<CustomObject>
    <label>UserNotification</label>
    <nameField>
        <label>UserNotification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserNotifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>