force-app/main/default/objects/sf_scm__UserNotification__c/fields/sf_scm__NotificationId__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__NotificationId__c</fullName>
    <label>NotificationId</label>
    <referenceTo>sf_scm__Notification__c</referenceTo>
    <relationshipLabel>UserNotifications</relationshipLabel>
    <relationshipName>UserNotifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>