force-app/main/default/objects/sf_scm__UserNotification__c/fields/sf_scm__ReadAt__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__ReadAt__c</fullName>
    <label>ReadAt</label>
    <type>DateTime</type>
</CustomField>