force-app/main/default/objects/sf_scm__UserNotification__c/fields/sf_scm__Sent__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent</label>
    <type>Checkbox</type>
</CustomField>