force-app/main/default/objects/sf_scm__UserNotification__c/fields/sf_scm__UserId__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserNotifications</relationshipName>
    <type>Lookup</type>
</CustomField>